--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ install:
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker-compose -f docker-compose-build.yaml push
+  - docker-compose -f deployment/docker/docker-compose-build.yaml push
