--- a/deployment/docker/docker-compose.yaml
+++ b/deployment/docker/docker-compose.yaml
@@ -1,5 +1,13 @@
 version: "3"
 services:
+  reverseproxy:
+      image: elsayedahmed19/k8-reverseproxy
+      ports:
+          - 8080:8080
+      restart: always
+      depends_on:
+        - backend-user
+        - backend-feed
   backend-user:
     image: elsayedahmed19/k8-restapi-user
     environment:
