--- a/deployment/k8s/reverseproxy-deployment.yaml
+++ b/deployment/k8s/reverseproxy-deployment.yaml
@@ -1,13 +1,30 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   labels:
     service: reverseproxy
   name: reverseproxy
 spec:
-  ports:
-  - name: "8080"
-    port: 8080
-    targetPort: 8080
+  replicas: 2
   selector:
-    service: reverseproxy
+    matchLabels:
+      app: reverseproxy
+  template:
+    metadata:
+      labels:
+        app: reverseproxy
+    spec:
+      containers:
+      - image: elsayedahmed19/k8-reverseproxy
+        name: reverseproxy
+        imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "1024Mi"
+            cpu: "500m"
+        ports:
+        - containerPort: 8080
+      restartPolicy: Always
